<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mcafee.mms.amazonabtestingdemo.LeanplumDemoActivity">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:gravity="center_horizontal">

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/labelCount"
                android:id="@+id/labelCount"
                android:gravity="center"
                android:layout_weight="1"
                android:textAlignment="center" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:text="@string/count"
                android:id="@+id/Count"
                android:gravity="center_vertical"
                android:layout_weight="1"
                android:textAlignment="center" />

            <Button
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="Add to Count"
                android:id="@+id/button_add"
                android:layout_weight="2" />
        </LinearLayout>

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:id="@+id/scrollView"
            android:layout_weight="4">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/text_defaultStatusText"
                android:id="@+id/text_defaultStatusText" />
        </ScrollView>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:gravity="center"
            android:layout_weight="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/submitEvents"
                android:id="@+id/button_submitEvents" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resetCounter"
                android:id="@+id/button_resetCounter" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
